<resources>
    <string name="app_name">ZHCET Club Portal</string>
    <string name="college_id">College Id</string>
    <string name="faculty_number">Faculty Number</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="renter_password">Renter Password</string>
    <string name="button">Button</string>
    <string name="register">Student Register</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
    <string name="signup">Register</string>
    <string name="signin">Login</string>
    <string name="club_register">Club Register</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clubname">Clubname</string>
    <string name="description">Description</string>
    <string name="about">About</string>
</resources>