<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup_Student">
    <TextView
        android:id="@+id/Clubregistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/club_register"
        app:boxBackgroundColor="@android:color/transparent"
        android:backgroundTintMode="@android:color/transparent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundColor="@android:color/transparent"
        android:backgroundTintMode="@android:color/transparent"
        android:hint="@string/name"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:endIconMode="clear_text"
        app:helperText="Enter Your Name*"
        app:helperTextTextColor="@color/color7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Clubregistration"
        app:startIconDrawable="@drawable/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/efullname"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Clubname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Club Name"
        app:boxBackgroundColor="@android:color/transparent"
        android:backgroundTintMode="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:endIconMode="clear_text"
        app:helperText="Enter club name*"
        app:helperTextTextColor="@color/color7"
        app:layout_constraintEnd_toEndOf="@+id/Fullname"
        app:layout_constraintStart_toStartOf="@+id/Fullname"
        app:layout_constraintTop_toBottomOf="@+id/Fullname"
        app:startIconDrawable="@drawable/club">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eclubname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/filepath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="Select Relevant Club Prove"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toStartOf="@+id/Clubid"
        app:layout_constraintStart_toStartOf="@+id/Clubname"
        app:layout_constraintTop_toBottomOf="@+id/Clubname" />

    <Button
        android:id="@+id/Clubid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/color2"
        android:text="Select"
        app:layout_constraintEnd_toEndOf="@+id/Clubname"
        app:layout_constraintTop_toBottomOf="@+id/Clubname" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="College Id"
        app:boxBackgroundColor="@android:color/transparent"
        android:backgroundTintMode="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="Enter Valid E-mail"
        app:helperTextTextColor="@color/color7"
        app:layout_constraintEnd_toEndOf="@+id/Clubname"
        app:layout_constraintStart_toStartOf="@+id/Clubname"
        app:layout_constraintTop_toBottomOf="@+id/Clubid"
        app:startIconDrawable="@drawable/mail"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Password"
        app:boxBackgroundColor="@color/color2"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText="Enter Strong Password"
        app:helperTextTextColor="@color/color7"
        app:layout_constraintEnd_toEndOf="@+id/Email"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:startIconDrawable="@drawable/security"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/epassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_bg"
        android:text="@string/signup"
        android:textColor="@color/color2"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintStart_toStartOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TextView
            android:id="@+id/Account1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/color3" />

        <TextView
            android:id="@+id/Signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@color/color4" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>